--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -7,3 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4"
+actix-web={version = "2", features=["rustls"]}
+actix-rt="1"
+actix-session="0.3"
+rustls = "0.16"
+serde="1"
+actix-files = "0.2.2"
+diesel = {version ="1", features=["mysql","r2d2"]}
+
+common = {path="../common"}
+user = {path="../user"}
+
