合并子项目解耦数据库类型添加文章接口

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -14,5 +14,6 @@ blake2 = "0.9" # https://github.com/RustCrypto/hashes
 data-encoding = "2"
 lazy_static = "1.4"
 diesel = {version ="1", features=["mysql","r2d2"]}
-
+uuid = { version = "0.8", features = ["serde", "v4"] }
 serde = { version = "1", features = ["derive"] }
+actix-web={version = "2"}
