添加静态页面

--- a/conf/application.yaml
+++ b/conf/application.yaml
@@ -1,5 +1,10 @@
 tl:
      app:
            mode : dev
+           http:
+                   host:  127.0.0.1
+                   port:   8088
            sign: 
-               salt:  This2020YearRustCms
+                     salt:  This2020YearRustCms
+           template: 
+                               name: freelancer
