--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -14,6 +14,9 @@ actix-session="0.3"
 actix-files = "0.2.2"
 actix-service = "1"
 actix-utils = "1"
+actix-multipart = "0.2"
+async-std = "1"
+lazy_static = "1.4"
 tera = "1"
 futures = "0.3"
 rustls = "0.16"
