--- a/dao/Cargo.toml
+++ b/dao/Cargo.toml
@@ -12,4 +12,5 @@ log = "0.4"
 serde = { version = "1", features = ["derive"] }
 common = {path = "../common"}
 
-diesel = {version ="1", features=["mysql","r2d2"]}
+diesel = {version ="1", features=["mysql","r2d2", "chrono"]}
+chrono = { version = "*", features = ["serde"] }
