--- a/conf/application.yaml
+++ b/conf/application.yaml
@@ -5,7 +5,7 @@ tl:
                    host:  127.0.0.1
                    port:   8088
            sign: 
-                     salt:  This2020YearRustCms
+                     salt:  This2020YearRustCmsTianlangStudio
            template: 
                                name: freelancer 
            upload:
