--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "common"
 version = "0.1.0"
-authors = ["Tianlang <tianlangstuido@aliyun.com>"]
-edition = "2018"
+authors = ["Tianlang <tianlangstudio@aliyun.com>"]
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 config="0.13"
 log = "0.4"
-log4rs="0.12"
+log4rs="1"
 blake2 = "0.10" # https://github.com/RustCrypto/hashes
 data-encoding = "2"
 lazy_static = "1.4"
