--- a/dao/Cargo.toml
+++ b/dao/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "dao"
 version = "0.1.0"
-authors = ["Tianlang <tianlangstuido@aliyun.com>"]
-edition = "2018"
+authors = ["Tianlang <tianlangstudio@aliyun.com>"]
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
