Revert "add script start.sh to make test use easy (#9)"
This reverts commit 2da7ee6bc9289d6fc141cb84b10ae81c3d91dfdf.

--- a/conf/application.yaml
+++ b/conf/application.yaml
@@ -9,5 +9,5 @@ tl:
            template: 
                                name: freelancer 
            upload:
-                       path: /tmp
-                       max_size: 10.0 #上传文件大小限制，单位MB，可以使用小数
+                       path: /data/test/upload/
+                       max_size:  1 0.0 #上传文件大小限制，单位MB，可以使用小数
