--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2021"
 [dependencies]
 log = "0.4"
 http="0.2"
-actix-web={version = "4", features=["openssl"]}
+actix-web={version = "4", features=["rustls"]}
+rustls = "0.20.2"
+rustls-pemfile = "1"
 #actix-rt="1"
 actix-session={version="0.6", features = ["cookie-session"]}
 actix-files = "0.6"
@@ -19,7 +21,7 @@ actix-multipart = "0.4"
 actix-http = "3"
 actix-identity = "0.4"
 async-std = "1"
-openssl = { version = "0.10", features = ["v110"] }
+
 lazy_static = "1.4"
 tera = "1"
 futures = "0.3"
